-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0, 5.6.0
-
None
-
Qt: Qt 5.0.0 MSVC2010 32bit
OS: Windows 7
Minimal code: (It can be compiled as-is)
#include <QtGui>
int main(int argc, char *argv[])
{
QApplication app(argc, argv);
QTreeView myView;
QFileSystemModel * sourceModel = new QFileSystemModel(&myView);
QSortFilterProxyModel * proxy1 = new QSortFilterProxyModel(&myView);
QIdentityProxyModel * proxy2 = new QIdentityProxyModel(&myView);
sourceModel->setRootPath("C:/");
proxy1->setSourceModel(sourceModel);
proxy2->setSourceModel(proxy1);
myView.setModel(proxy2);
myView.show();
return app.exec();
}
After clicking quickly in the tree view a few times to expand folders in order to stress the software, the application crashes and give a read access violation error.
Note: There is no problem if the proxies are chained the other way around or if they are used alone.
- is duplicated by
-
QTBUG-44143 QIdentityProxyModel does not properly handle/propagate 'layoutAboutToBeChanged' signal from the source model.
-
- Closed
-
-
QTBUG-54412 QComboBox loses selected item when several proxies are chained
-
- Closed
-
- relates to
-
QTBUG-47711 QSortFilterProxyModel policy on invalidating QModelndexes isn't consistent, can lead to crashes
-
- Reported
-
-
QTBUG-44611 QItemSelectionProxyModel crashes due to not updating its persistent indexes
-
- Closed
-